# omnidesk

./: .cursorrules  .env.example  .eslintignore  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CODING_CONVENTIONS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.builder  README.md  diff.patch  docker-compose.builder.yml  eslint.config.mjs  fix.py  google_search.automa.json  jobs.json  lint-output-utf8.txt  lint-output.txt  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  roadmap.md  run_log.txt  skills-lock.json  test-mcp.js  testid-report.md  tmp.ts  turbo.json  typecheck_report.txt  vercel.json  virtualization_backlog.md
.agents/: AGENTS.md  mcp_config.json
.changeset/: fix-ui-alert-export.md  fix-webkit-launcher.md  update-omni-apps.md  updater-test.md
.gemini/config/: config.json  mcp_config.json
.github/workflows/: build-tauri.yml  ci.yml  release.yml  tauri-release.yml
apps/analytics/: manifest.json  package.json
apps/auth/: package.json
apps/automa/: README.md  manifest.json  package.json  tsconfig.json
apps/automa/profile/src-tauri/: Cargo.toml  tauri.conf.json
apps/automa/profile/src-tauri/migrations/: 20260613_sync_queue_update.sql  20260628000200_workflow_logs.sql
apps/automa/profile/src-tauri/scripts/: package.json
apps/automa/profile/src-tauri/src/: lib.rs
apps/automa/profile/src-tauri/src/api/: mod.rs
apps/automa/profile/src-tauri/src/api/handlers/: automa.rs  browser_profiles.rs  mod.rs  preferences.rs  workflows.rs
apps/automa/profile/src-tauri/src/commands/: browser_profiles.rs  mod.rs
apps/automa/profile/src-tauri/src/db/models/: browser_profile.rs  workflow.rs
apps/automa/profile/src-tauri/src/services/: browser_profile_service.rs  mod.rs  realtime.rs  storage_optimizer.rs
apps/automa/profile/src-tauri/src/services/browser_launcher/: chrome.rs  downloader.rs  edge.rs  firefox.rs  mod.rs  webkit.rs
apps/automa/profile/src-tauri/src/system/: config.rs  logging.rs
apps/core/: package.json
apps/dashboard/: manifest.json  package.json
apps/desktop/: components.json  eslint.config.js  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 20260609000000_init_issues.sql  20260615000000_installed_apps_version.sql
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/api/: auth.rs  issues.rs  mod.rs
apps/desktop/src-tauri/src/api/handlers/: apps.rs  mcp.rs  mod.rs  projects.rs
apps/desktop/src-tauri/src/cli/: main.rs
apps/desktop/src-tauri/src/commands/: app_store.rs  browser_profiles.rs  credentials.rs  issues.rs  mod.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/models/: issue.rs
apps/desktop/src-tauri/src/services/: browser_profile_service.rs  marketplace.rs  mod.rs  worker.rs
apps/desktop/src-tauri/src/services/browser_launcher/: chrome.rs  edge.rs  firefox.rs  mod.rs
apps/desktop/src-tauri/src/system/: mod.rs
apps/developer-console/: manifest.json  package.json  tsconfig.json
apps/documents/: manifest.json  package.json
apps/e2e-orchestrator/: package.json  tsconfig.json
apps/file-browser/: manifest.json  package.json  vite.config.ts
apps/launcher/: manifest.json  package.json  tsconfig.json  vite.config.ts
apps/lifecycle/: manifest.json  package.json
apps/notifications/: package.json  tsconfig.json
apps/omni-engine/: CHANGELOG.md  index.html  openapi-ts.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
apps/omni-extension/: .eslintignore  .eslintrc.js  package.json  postcss.config.js  secrets.blank.js  webpack.config.js
apps/omni-profile/: CHANGELOG.md  index.html  package.json  vite.config.ts
apps/omni-studio/: CHANGELOG.md  components.json  eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/projects/: manifest.json  package.json
apps/showcase/: manifest.json  package.json
apps/team/: manifest.json  package.json
apps/web/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.d.ts.map  vite.config.js  vite.config.js.map  vite.config.ts
apps/web-portal/: package.json
apps/wordpress-sync/: manifest.json  package.json
docs/: AUTO_UPDATER_GUIDE.md  api.md  architecture.md  index.md  omni_studio_design_system.md  omni_studio_design_system_utf8.md  presale_architecture.md
docs/.vitepress/: config.mts
docs/api/: engine_api_alignment_report.md  profile_api_alignment_report.md  studio_api_alignment_report.md
docs/auto-updater/: auto_updater_guide.md
docs/guide/: getting-started.md
docs/rebranding/: rebranding_guide.md
docs/release/: release_guide.md
docs/schema/: common.md  notifications.md  overview.md  profiles.md  projects.md  tasks.md
docs/walkthroughs/: 2026-06-09-walkthrough.md
omnidesk-app-sdk/scripts/: pack.mjs
packages-rs/omni-shared/: Cargo.toml
packages-rs/omni-shared/migrations/: 20260612000000_installed_apps.sql  20260612_sync_queue.sql
packages-rs/omni-shared/migrations-automa/: 20260628000000_workflows.sql  20260628000300_schedules.sql  20260628000400_folders.sql  20260628000400_workflows_soft_delete.sql
packages-rs/omni-shared/src/: db.rs  error.rs  lib.rs  worker.rs
packages-rs/omni-shared/src/automa/: api.rs  executor.rs  logs.rs  mod.rs  storage.rs  workflow.rs
packages-rs/omni-shared/src/mcp/: handler.rs
packages-rs/omni-shared/src/models/: auth.rs  mcp.rs  mod.rs  system.rs  workflow.rs
packages-rs/omni-shared/src/services/: mcp_service.rs  mod.rs  schedules_service.rs  workflow_service.rs
packages-rs/omni-tauri-core/: Cargo.toml
packages-rs/omni-tauri-core/src/: constants.rs  fs.rs  hardware.rs  lib.rs  network.rs  system.rs  window.rs
platform/automa/: package-lock.json  package.json  (+1 more)
scratch/: fix_type_errors.mjs  refactor_entrypoints.mjs
scripts/: db-reset.js  db-reset.mjs  docker-build.sh  scan-testids.mjs  sync-api.js  sync-api.mjs  sync-deps.js  sync-native-versions.mjs  task-logger.mjs
supabase/: config.toml
(+925 files in other folders)
