[package]
name = "omni-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
base64 = "0.22"
pkcs8 = { version = "0.10", features = ["alloc", "std"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2.5"
sha2 = "0.11.0"
keyring = "3"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
axum = { version = "0.7", features = ["ws"] }
