[package]
name = "omni-tauri-core"
version = "0.1.0"
edition = "2021"
description = "Shared core utilities and Tauri commands for OmniDesk apps"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
