[package]
name = "kill-bug-machine"
version = "0.1.0"
description = "Cross-platform Desktop DevTool — Crawl, manage, and expose bugs via MCP"
authors = ["KBM Team"]
edition = "2021"

[lib]
name = "kbm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
keyring = "3"

[[bin]]
name = "kbm-cli"
path = "src/cli/main.rs"
