[package]
name = "kill-bug-machine"
default-run = "kill-bug-machine"
version = "0.1.0"
description = "Premium B2B Enterprise Platform with App Marketplace"
authors = ["KBM Team"]
edition = "2021"

[lib]
name = "kbm_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
keyring = "3"
reqwest = { version = "0.12", features = ["json"] }
utoipa-scalar = { version = "0.2", features = ["axum"] }
tauri-plugin-deep-link = "~2"
jsonwebtoken = "9"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors"] }

[[bin]]
name = "kbm-cli"
path = "src/cli/main.rs"
