[package]
name = "omnidesk-automa-profile"
default-run = "omnidesk-automa-profile"
version = "0.1.0"
description = "Premium B2B Enterprise Platform with App Marketplace"
authors = ["OmniDesk Team"]
edition = "2021"

[lib]
name = "omnidesk_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
keyring = "3"
reqwest = { version = "0.12", features = ["json"] }
utoipa-scalar = { version = "0.2", features = ["axum"] }
tauri-plugin-deep-link = "~2"
jsonwebtoken = "9"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
dotenvy = "0.15.7"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
base64 = "0.22"
pkcs8 = { version = "0.10", features = ["alloc", "std"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
sha2 = "0.11.0"
async-stream = "0.3.6"
tauri-plugin-log = "2"
walkdir = "2.5.0"
log = "0.4.33"
tokio-stream = { version = "0.1.18", features = ["sync"] }
sysinfo = "0.33"

[[bin]]
name = "omnidesk-automa-profile-cli"
path = "src/cli/main.rs"

[[bin]]
name = "openapi_export"
path = "src/bin/openapi_export.rs"
